<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    style="@style/BACKGROUND"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingTop="32dp"
    android:paddingEnd="24dp"
    android:paddingBottom="32dp"
    tools:context=".core.ui.MainActivity">

    <EditText
        android:id="@+id/email_et"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rectangular_edit_text"
        android:elevation="2dp"
        style="@style/TEXT"
        android:hint="@string/sign_in_1"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@android:color/black"
        android:textColorHint="#757575"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/password_et"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rectangular_edit_text"
        android:elevation="2dp"
        android:hint="@string/sign_in_2"
        android:inputType="textPassword"
        android:padding="12dp"
        style="@style/TEXT"
        android:textColor="@android:color/black"
        android:textColorHint="#757575"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/forgot_pass_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="24dp"
        style="@style/TEXT"
        android:text="@string/sign_in_3"
        android:textColor="#2196F3"
        android:textSize="14sp" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#2196F3"
        android:elevation="2dp"
        android:text="@string/sign_in_4"
        android:textColor="@android:color/white"
        style="@style/BUTTON"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/not_user_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"
        android:text="@string/sign_in_5"
        android:textColor="#2196F3"
        style="@style/TEXT"
        android:textSize="16sp" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:lottie_url="@string/lottie_url"
        tools:visibility="visible" />

</LinearLayout>
