<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:elevation="8dp"
    app:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/BACKGROUND"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_query"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_1" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/search_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/search_2"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_query" />


        <TextView
            android:id="@+id/sortBy_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/search_3"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_options" />


        <RadioGroup
            android:id="@+id/sort_by_rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@id/sort_by_date_rb"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sortBy_tv">

            <RadioButton
                android:id="@+id/sort_by_date_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_4" />

            <RadioButton
                android:id="@+id/sort_by_relevance_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_5" />

            <RadioButton
                android:id="@+id/sort_by_popularity_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_6" />
        </RadioGroup>


        <Spinner
            android:id="@+id/Language_Spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sort_by_rg" />


        <TextView
            android:id="@+id/from_date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/search_7"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Language_Spinner" />

        <ImageButton
            android:id="@+id/from_date_ib"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="12dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/select_from_date"
            android:src="@drawable/ic_calender"
            app:layout_constraintStart_toEndOf="@id/from_date_tv"
            app:layout_constraintTop_toTopOf="@id/from_date_tv" />

        <TextView
            android:id="@+id/selected_from_date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/from_date_ib"
            app:layout_constraintTop_toTopOf="@id/from_date_ib" />


        <TextView
            android:id="@+id/to_date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="@string/search_8"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/from_date_tv" />

        <ImageButton
            android:id="@+id/to_date_ib"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/select_to_date"
            android:src="@drawable/ic_calender"
            app:layout_constraintStart_toEndOf="@id/to_date_tv"
            app:layout_constraintTop_toTopOf="@id/to_date_tv" />

        <TextView
            android:id="@+id/selected_to_date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/to_date_ib"
            app:layout_constraintTop_toTopOf="@id/to_date_ib" />


        <Button
            android:id="@+id/find_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/search_9"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>