<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    style="@style/BACKGROUND"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".core.ui.MainActivity">

    <!-- Toolbar with Back Button -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:title="@string/search_1"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Dark Mode Section -->
    <LinearLayout
        android:id="@+id/mode"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            style="@style/TEXT"
            android:textSize="20sp"
            android:text="@string/setting_2"
            android:layout_marginEnd="160dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_light_mood"
                android:contentDescription="Light Mode" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rotationX="-2"
                android:src="@drawable/ic_dark_mood"
                android:contentDescription="Dark Mode" />
        </LinearLayout>
    </LinearLayout>

    <!-- Language Section -->
    <LinearLayout
        android:id="@+id/language"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/mode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            style="@style/TEXT"
            android:textSize="20sp"
            android:layout_marginEnd="165dp"
            android:text="@string/setting_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:text="EN"
                style="@style/TEXT"
                android:textSize="17sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false" />

            <TextView
                android:text="AR"
                style="@style/TEXT"
                android:textSize="17sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>